# Astro-ORACLE

./: .gitignore  Ensemble_model.py  LICENSE  LSST_Source.py  LSTM_model.py  ORACLE_requirements.txt  README.md  RNN_model.py  class_summaries.py  combine_parquet.py  dataloader.py  environment.yml  fits_to_parquet.py  interpret_results.py  loss.py  make_event_tables.slurm  parquet_to_LSST_Source.py  prep_arrays.py  pyproject.toml  requirements.txt  run_analysis.py  taxonomy.py  test_LSTM.ipynb  test_RNN.err  test_RNN.out  test_RNN.py  test_RNN.slurm  test_ensemble.py  time_benchmark.py  time_benchmark.slurm  train.ipynb  train_LSTM.ipynb  train_LSTM.slurm  train_LSTM_model.py  train_RNN.out  train_RNN.py  train_RNN.slurm  train_RNN_models.ipynb  train_RNN_rate_agnostic.ipynb  train_ensemble.py  (+1 more)
figures/: model_arch.key
models/: LSTM.pt
models/flat/: best_model.h5  combined_sample.csv  test_sample.csv  train_sample.csv
models/lsst_alpha_0/: best_model.h5
models/lsst_alpha_0.5/: best_model.h5  combined_sample.csv  loss_history.csv  test_sample.csv
models/lsst_alpha_0.5_beta_0.1/: best_model.h5  lstm_epoch_0.h5  lstm_epoch_1.h5  lstm_epoch_10.h5  lstm_epoch_100.h5  lstm_epoch_101.h5  lstm_epoch_102.h5  lstm_epoch_103.h5  lstm_epoch_104.h5  lstm_epoch_105.h5  lstm_epoch_106.h5  lstm_epoch_107.h5  lstm_epoch_108.h5  lstm_epoch_109.h5  lstm_epoch_11.h5  lstm_epoch_110.h5  lstm_epoch_111.h5  lstm_epoch_112.h5  lstm_epoch_113.h5  lstm_epoch_114.h5  lstm_epoch_115.h5  lstm_epoch_116.h5  lstm_epoch_117.h5  lstm_epoch_118.h5  lstm_epoch_119.h5  lstm_epoch_12.h5  lstm_epoch_120.h5  lstm_epoch_121.h5  lstm_epoch_122.h5  lstm_epoch_123.h5  lstm_epoch_124.h5  lstm_epoch_125.h5  lstm_epoch_126.h5  lstm_epoch_127.h5  lstm_epoch_128.h5  lstm_epoch_129.h5  lstm_epoch_13.h5  lstm_epoch_130.h5  lstm_epoch_131.h5  lstm_epoch_132.h5  (+260 more)
models/lsst_alpha_0.5_no_md/: best_model.h5  loss_history.csv  validation_sample.csv
models/lsst_alpha_0.75/: best_model.h5
models/lsst_rate_agnostic/: best_model.h5
notebooks/: AGN_17032813.ecsv  Debugging-n_detections.ipynb  Debugging.ipynb  Demo.ipynb  Finesst_plots.ipynb  Tutorial.ipynb  hierarchy_plot.ipynb  md_vs_no_md_plots.ipynb  undo_scaling.ipynb
scripts/: make_event_tables.slurm  test_RNN.err  test_RNN.out  test_RNN.slurm  time_benchmark.slurm  train_RNN.slurm
src/astroOracle/: LSST_Source.py  RNN_model.py  class_summaries.py  combine_parquet.py  (+14 more)
(+138 files in other folders)
